--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WelcomeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".WelcomeFragment"
+
+    android:background="#fff">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,7 +38,7 @@
 
             <TextView
                 android:id="@+id/user_name_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
                 android:text="Name Name"
@@ -43,7 +46,7 @@
                 android:textSize="25dp"
 
                 android:layout_below="@id/welcome_tv"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="50dp"
                 android:layout_marginTop="10dp"
 
                 />
@@ -98,8 +101,10 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/category_academics_card"
                     android:layout_marginTop="30dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_alignParentStart="true"
+                    app:cardElevation="8dp"
 
                     >
                     <RelativeLayout
@@ -138,7 +143,9 @@
 
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="30dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
+                    app:cardElevation="8dp"
 
                     >
                     <RelativeLayout
@@ -189,8 +196,10 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/category_novel_card"
                     android:layout_marginTop="30dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_alignParentStart="true"
+                    app:cardElevation="8dp"
                     >
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -198,10 +207,11 @@
                         android:id="@+id/category_novel"
 
                         >
+
                         <ImageView
+                            android:id="@+id/novel_iv"
                             android:layout_width="180dp"
                             android:layout_height="90dp"
-                            android:id="@+id/novel_iv"
 
                             android:src="@drawable/novel"
 
@@ -232,7 +242,9 @@
 
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="30dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
+                    app:cardElevation="8dp"
 
                     >
                     <RelativeLayout
@@ -283,8 +295,11 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/category_manga_card"
                     android:layout_marginTop="30dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_alignParentStart="true"
+                    app:cardElevation="8dp"
+
                     >
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -326,7 +341,9 @@
 
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="30dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
+                    app:cardElevation="8dp"
 
                     >
                     <RelativeLayout
